# cortex.python

./: CMakeLists.txt  Makefile  README.md  install_deps.bat  install_deps.sh  main.cc  python_embedding_helper.h
.github/scripts/: e2e-test-server-linux-and-mac.sh  e2e-test-server-windows.bat  python-file-to-test.py
.github/workflows/: build.yml  quality-gate.yml
base/cortex-common/: EngineI.h  cortexpythoni.h  enginei.h
examples/server/: CMakeLists.txt  server.cc
pyrunner_deps/: CMakeLists.txt
src/: PythonRuntimeEngine.cc  PythonRuntimeEngine.h  PythonRuntimeUtils.hpp  python_engine.cc  python_engine.h  python_file_execution_request.h  python_runtime_engine.cc  python_runtime_engine.h  python_runtime_utils.h  python_utils.h
